--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <span class="icon"></span><h1>F-lock</h1>
+        <span class="icon"></span><h1>F-Clock</h1>
         <nav>
             <ul>
                 <li class="navlinks"><a href="#home">Home</a></li>
