--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>f-lock.com</title>
+    <title>f-clock.com</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="images/icons8-timer-16. 2png.png">
 </head>
